<resources>
    <string name="app_name">MarkIt</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="class_">Password</string>
    <string name="mobile">Mobile Number</string>
    <string name="branch">Field of interest</string>
    <string name="heading">Enter Details For Registration</string>
    <string name="submit">Login</string>
    <string name="more">More About Yourself</string>
    <string name="interest">Field Of Interest</string>
    <string name="hobbies">Hobbies</string>
    <string name="reset">Already have an account</string>
    <string name="enter">Enter</string>
    <string name="register">Register</string>
    <string name="stepcounter">StepCounter</string>
    <string name="password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="head">SelfCare</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main3">MainActivity3</string>
</resources>