<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222831"
    tools:context=".Registercompany">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/heading"
        android:textColor="#EEEEEE"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.507" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#393E46"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name"
                android:layout_width="155dp"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name"
                android:textColor="#EEEEEE"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nameentry"
                android:layout_width="273dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40sp"
                android:layout_weight="1"
                android:contentDescription="@string/name"
                android:ems="10"
                android:textColor="#EEEEEE"
                android:hint="Name"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:visibility="visible"
                tools:ignore="EditableContentDescCheck" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/email"
                android:layout_width="155dp"
                android:textColor="#EEEEEE"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/emailentry"
                android:layout_width="273dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40sp"
                android:layout_weight="1"
                android:contentDescription="@string/email"
                android:ems="10"
                android:hint="Email"
                android:textColor="#EEEEEE"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:visibility="visible"
                tools:ignore="EditableContentDescCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mobile"
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#EEEEEE"
                android:text="@string/mobile"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/mobileentry"
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25sp"
                android:layout_weight="1"
                android:ems="10"
                android:textColor="#EEEEEE"
                android:hint="10 digit number"
                android:inputType="phone"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pass"
                android:layout_width="149dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:text="@string/class_"
                android:textColor="#EEEEEE"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:textColor="#EEEEEE"

                android:inputType="textPassword" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pass2"
                android:layout_width="149dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:text="@string/password"
                android:textColor="#EEEEEE"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Passwordconfrm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#EEEEEE"
                android:ems="10"
                android:inputType="textPassword" />


        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/submitbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFF5"
        android:text="@string/register"
        app:cornerRadius="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.349" />

    <Button
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFF5"
        android:text="@string/reset"
        app:cornerRadius="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitbutton" />

</androidx.constraintlayout.widget.ConstraintLayout>